Fix incorrect spacing on .lcf __text block

--- a/assets/styles/components/_blocks.scss
+++ b/assets/styles/components/_blocks.scss
@@ -58,13 +58,11 @@
 		@include gs-media (d) {
 			@include gs-span(d, all);
 		}
-		.lcf & { // for courses landing page
-			@include component-spacing-bottom;
-		}
+	}	
+}
 
-	}
-
-	
+.lcf .l-content.__text {
+	@include component-spacing-bottom;
 }
 
 .leader {
